# tactile-sensors

./: CMakeLists.txt  README.md
DSA-Konqueror/: README  calibration_temperature_noise.xml  calibration_temperature_noise_standalone.xml
DSA-Konqueror/icons/: license
cmake/: FindEigen.cmake
dependencies/dsa_patch/: README  dsa.cpp  dsa.h
examples/: CMakeLists.txt  exampleChebyshevMoments.cpp  exampleFeatureExtraction.cpp  exampleFrameManager.cpp
pressure_profiles/calibration_noise/: measuring_record
pressure_profiles/calibration_sensitivity/: sensitivity_0.1-1.0.dsa
pressure_profiles/calibration_weight_and_temperature/: measuring_record
pressure_profiles/classification_video/: cup.dsa  foam.dsa  hockey.dsa  pen_thick.dsa  pen_thin.dsa  utah_teapot.dsa  xmas.dsa
pressure_profiles/frequency_analysis/: roughness_test_rough.dsa  roughness_test_smooth.dsa  sliptest_highspeed_wooden_cylinder.dsa  sliptest_highspeed_xmasball.dsa
pressure_profiles/grasps/: foam_ball.dsa  grasp_shere.dsa  hockey_ball.dsa  tennisball.dsa
pressure_profiles/misc/: ghosting_motivation_threshold_calibration.dsa  ghosting_threshold_60_and_50.dsa  masked_matrix.dsa  masked_matrix_slip.dsa  reactive_grasping.dsa  sensitivity_test_0.5-0.25-0.5-0.75-1.0-0.5.dsa
pressure_profiles/slip-detection/: slip_and_rotation_teapot_handle.dsa  slip_examples_pen_and_wooden_block.dsa  slip_hockey_ball.dsa  slip_test.dsa  slip_test2.dsa
pressure_profiles/video/: egg.dsa  slip_detection_adaptive_with_hand.dsa  slip_detection_tactile_not_even_lifting.dsa
python/PyDSA-Konqueror/: PyDSA-Konqueror.py  PyDSA-Konqueror.sh  README
python/basic_stuff/: framemanager_with_features.py  reactive_grasping.dsa
python/calibration_misc/: Doukeni_Karakatsani.pgf  Doukeni_Karakatsani.py  calibration_test.pgf  calibration_test.py  calibration_test_1000_3cm_cropped.dsa
python/calibration_noise_temperature/: noise-temperature_calibration.py  noise-temperature_multiplot.py  noise_threshold_linear_regression.pgf  rising_temperature.pgf  rising_temperature.py  temperature-noise.dsa
python/calibration_pressure/: pressure_calibration.py  pressure_calibration_K.pgf  pressure_calibration_K_vs_m.pgf  pressure_calibration_m.pgf  pressure_calibration_temperature.pgf  temperature_experiment_k.pgf  temperature_experiment_m.pgf
python/chebyshev_polynomials/: chebyshev.py  polynomials_chebyshev.pgf  polynomials_chebyshev_2D.pgf  polynomials_chebyshev_2D_colorbar.pgf
python/classification/: calibrate_impression_depth.py  experiments.py  performance_measurements.py  predict_boost_python.py  readme  train_classifier.py
python/curve_fitting/: PT2-element.pgf  PT2-element.py  fitting_flickering.pgf  fitting_foam_ball.pgf  fitting_hockey_ball.pgf  fitting_saturation.pgf  fitting_visualization.py  foam_ball_pt2.dsa  golf_ball_001667-001724.dsa  hockey_ball_pt2.dsa
python/denavit-hartenberg/: DH-visualization_matplotlib.py  DenavitHartenberg.py  bottle_plastic_contact_lens.dsa  grasp_preshape_close_ratio.pgf  grasp_preshape_close_ratio.py  miniball.pgf
python/filtering_spatial/: denoising.py  denoising_interactive.py  ghosting_threshold_50.dsa  spatial_filtering.py  spatial_filtering_ghosting.pgf  spatial_filtering_ghosting_median.pgf  wooden_block_flat_001968-002012.dsa
python/filtering_temporal_and_derivatives/: centrical_87_tennisball.dsa3  savitzky_golay.py  signal_smooth.py  temporal_filtering_derivatives.pgf  temporal_filtering_visualization.py
python/grasp_visualization/: foam_ball.dsa  (+8 more)
src/: CMakeLists.txt  DSAKonqueror.doxyfile  NumPyArrayData.h  README.dox  calibration.cpp  calibration.h  camera.cpp  camera.h  chebyshevMoments.cpp  chebyshevMoments.h  colormap.cpp  colormap.h  controller.cpp  controller.h  extension.cpp  extension.h  featureExtraction.cpp  featureExtraction.h  forwardKinematics.cpp  forwardKinematics.h  framegrabberDSA.cpp  framegrabberDSA.h  framegrabberSDH.cpp  framegrabberSDH.h  framemanager.cpp  framemanager.h  framemanager_python.cpp  frameprocessor.cpp  frameprocessor.h  guiChart.cpp  guiChart.h  guiController.cpp  guiController.h  guiGraph.cpp  guiGraph.h  guiMain.cpp  guiMain.h  guiRenderer.cpp  guiRenderer.h  guiRenderer2D.cpp  (+22 more)
src/doc/html/: Miniball_8hpp_source.html  NumPyArrayData_8h_source.html  annotated.html  bug.html  calibration_8h_source.html  camera_8h_source.html  chebyshevMoments_8h_source.html  classCalibration-members.html  classCalibration.html  classCamera-members.html  classCamera.html  classChebyshev-members.html  classChebyshev.html  classColormap-members.html  classColormap.html  classController-members.html  classController.html  classDevice-members.html  classDevice.html  classExt-members.html  classExt.html  classExtException-members.html  classExtException.html  classFeatureExtraction-members.html  classFeatureExtraction.html  classFeatureExtractionWrapper-members.html  classFeatureExtractionWrapper.html  classForwardKinematics-members.html  classForwardKinematics.html  classFrameGrabberDSA-members.html  classFrameGrabberDSA.html  classFrameGrabberSDH-members.html  classFrameGrabberSDH.html  classFrameManager-members.html  classFrameManager.html  classFrameManagerWrapper-members.html  classFrameManagerWrapper.html  classFrameProcessor-members.html  classFrameProcessor.html  classHSL-members.html  (+150 more)
src/doc/html/search/: all_61.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_6d.html  all_6f.html  all_72.html  all_73.html  all_74.html  all_75.html  all_78.html  classes_63.html  classes_64.html  classes_65.html  classes_66.html  classes_67.html  classes_68.html  classes_6a.html  classes_6d.html  classes_6e.html  classes_6f.html  classes_72.html  classes_73.html  classes_74.html  defines_73.html  enums_65.html  files_73.html  functions_63.html  functions_64.html  functions_65.html  functions_66.html  functions_67.html  functions_68.html  functions_69.html  functions_6c.html  functions_6d.html  functions_6f.html  (+8 more)
video_src/: README  create_video.sh  create_video_loop.sh  drop_frames.py  renaming_sequence.sh  resize_and_rotate.sh
(+981 files in other folders)
